correction about expected <II> (which is =1)
just correcting excpected value of identity operator (II). It must be always equal to 1 (in the noise free case). So, <II> = total_counts/total_counts = 1

--- a/VQE.ipynb
+++ b/VQE.ipynb
@@ -239,7 +239,7 @@
     "\n",
     "    total_counts = counts['00']  + counts['11'] + counts['01'] +counts['10']\n",
     "\n",
-    "    II= counts['00']  + counts['11'] - counts['10'] - counts['01']\n",
+    "    II= counts['00']  + counts['11'] + counts['10'] + counts['01']\n",
     "    \n",
     "    II = II/total_counts\n",
     "    \n",
